gap: 40px; et correction test solde or

--- a/css/main.css
+++ b/css/main.css
@@ -144,6 +144,7 @@ ul.cartes {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    gap: 40px;
 
 }
 
